# obscura-benchmark

./: .gitignore  Cargo.toml  README.md
compare/: README.md  head-to-head.py  scale.py
crates/perf-bench/: Cargo.toml
crates/perf-bench/src/: main.rs
crates/triage/: Cargo.toml
crates/triage/src/: main.rs  tiers.list  tiers.rs
crates/wpt-runner/: Cargo.toml
crates/wpt-runner/src/: capture.rs  cdp.rs  fetch.rs  main.rs  manifest.rs  report.rs
obstacle-course/: README.md  manifest.json  run.py
obstacle-course/data/: articles.json  items.json
obstacle-course/fixtures/: async-render.html  charset-shiftjis.html  cookies.html  dom-build.html  es-modules.html  extract-article.html  extract-html.html  extract-links.html  extract-markdown.html  fingerprint.html  modern-js-lang.html  modern-js-platform.html  observer-intersection.html  observer-mutation.html  preact-app.html  raf-update.html  react-app.html  spa-mini-app.html  spa-router.html  ssr-hydrate.html  static.html  storage-roundtrip.html  timers.html  vue-app.html  web-component.html  webapi-custom-element.html  webapi-dialog.html  webapi-fileapi.html  webapi-input-step.html  webapi-range.html  webapi-selection.html  webapi-textdecoder.html  webapi-url.html
obstacle-course/modules/: lazy.js  util.js
realworld/: README.md  run.py  sites.txt
reliability/: sweep.py
scripts/: run-bench.sh  run-compare.sh  run-obstacle-course.sh  run-realworld.sh  run-wpt.sh  setup-wpt.sh
stealth-bench/: run.py
wpt-overlay/resources/: testharnessreport.js
