[package]
name = "perf-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Times Obscura CLI fetch performance and reports per-url latency and scrape throughput."

[[bin]]
name = "perf-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
