[package]
name = "wpt-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Drives Obscura over CDP against the Web Platform Tests and reports conformance results."

[[bin]]
name = "wpt-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
